major updates to JavaFX and modules handling